feat: migrate to PyTorch and update infrastructure
- Transition CNN engine to PyTorch for improved performance
- Update training pipeline for specific government identity documents
- Move ML service port to 8001 and add fallback heuristic model
- Adjust RestTemplate configuration for reliable file streaming